# alertin

./: .dockerignore  .env.example  .env.scraper  .gitignore  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_SUMMARY.md  CODIGO_MUERTO_ELIMINADO.md  CRITICAL_FIXES_SUMMARY.md  DOCKER.md  Dockerfile  EJEMPLO_ENRIQUECIMIENTO.md  EXAMPLE_REFACTORED_REPOSITORY.py  FINAL_CLEANUP_REPORT.md  IMPLEMENTATION_ROADMAP.md  INTEGRACION_COMPLETA.md  INTEGRACION_NLP.md  LIMPIEZA_COMPLETADA.md  MEJORAS_DATABASE.md  Makefile  Makefile.scraper  PLAN_ENRIQUECIMIENTO_NLP.md  QUICKSTART.md  QUICK_START_REFACTORED.md  README.md  README.scraper.md  REFACTORING_COMPLETED.md  REFACTORING_README.md  REFACTORING_SUMMARY.md  REFACTOR_GUIDE.md  RESUMEN_FINAL.md  RESUMEN_IMPLEMENTACION_NLP.md  SCALABILITY_MIGRATION.md  TODO_NOW.md  VERIFICACION_SISTEMA.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.scraper.yml  (+5 more)
_archived/: DOCKER_QUICKSTART.md  Dockerfile  EXAMPLE_REFACTORED_PIPELINE.py  (+3 more)
services/alert-manager/: Dockerfile  README.md  pyproject.toml
services/alert-manager/src/: __init__.py  manager.py
services/alert-manager/src/rules/: __init__.py  base_rule.py  default_rules.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/src/: __init__.py
services/api-gateway/src/api/: __init__.py  app.py
shared/: __init__.py  pyproject.toml
shared/config/: __init__.py  settings.py
shared/database/: connection.py
shared/database/migrations/: README_MIGRATIONS.md  env.py
shared/database/migrations/versions/: 001_fresh_versioned_schema.py  002_add_translation_enrichment_fields.py
shared/database/repositories/: _old_cve_repository.py  cve_repository.py  cve_repository_minimal.py
shared/kafka/: __init__.py  config.py  consumer.py  producer.py
(+82 files in other folders)
