[tool.poetry]
name = "alert-manager"
version = "1.0.0"
description = "Alert Manager Service - Evaluates CVEs and generates alerts"
authors = ["SOC Team"]

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
