[tool.poetry]
name = "api-gateway"
version = "2.0.0"
description = "API Gateway Service - FastAPI REST API"
authors = ["SOC Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.25.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
